syntax = "proto3";

package auth.v1.cache;

option go_package = "erp.localhost/internal/infra/model/auth/v1/cache;authcache";

import "google/protobuf/timestamp.proto";
import "tagger/tagger.proto";

// =============================================================================
// MongoDB Models (for database persistence)
// =============================================================================

// RefreshToken model for MongoDB auth_db.refresh_tokens collection
message RefreshToken {
  string user_id = 1 [(tagger.tags) = "json:\"user_id\""];
  string tenant_id = 2 [(tagger.tags) = "json:\"tenant_id\""];
  string token_hash = 3 [(tagger.tags) = "json:\"token_hash\""];
  google.protobuf.Timestamp expires_at =4 [(tagger.tags) = "json:\"expires_at\""];
  google.protobuf.Timestamp created_at = 5 [(tagger.tags) =  "json:\"created_at\""];
  google.protobuf.Timestamp last_used_at = 6 [(tagger.tags) = "json:\"last_used_at,omitempty\""];
  string ip_address = 7 [(tagger.tags) = "json:\"user_agent\""];
  bool revoked = 9 [(tagger.tags) = "json:\"revoked\""];
  google.protobuf.Timestamp revoked_at = 10 [(tagger.tags) = "json:\"revoked_at,omitempty\""];
  string revoked_by = 11 [(tagger.tags) = "json:\"revoked_by,omitempty\""];
}
